[package]
name = "emacsconf2nix"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tree-sitter = "=0.22.2"
tree-sitter-elisp = "1.3.0" # Patched with my fork.

[patch.crates-io]
tree-sitter-elisp = { version = "=1.5.0", git = "https://github.com/shymega/tree-sitter-elisp", branch = "shymega/bump-ver" }

[build-dependencies]
cc = "1.0.90"

